--- a/app/globals.css
+++ b/app/globals.css
@@ -3,16 +3,17 @@
 @tailwind utilities;
 
 *,
-html {
+html,
+body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  color: #fff;
   -webkit-appearance: none;
 }
 
 body {
-  background-color: rgb(20, 20, 20);
-  color: #fff;
+  height: 100%;
 }
 
 a,
