--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,7 @@ span {
     @apply label-primary text-[#8C8C8C];
   }
   .icon-button {
-    @apply flex items-center gap-4 whitespace-nowrap rounded px-[1rem] py-[0.2rem];
+    @apply flex items-center gap-[1vw] whitespace-nowrap rounded px-[1vw] py-[0.2vw];
   }
 
   .center-x-y {
