--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: #fff;
+  /* color: #fff; */
   -webkit-appearance: none;
 }
 
